@@ -110,6 +110,7 @@ static const char usage[] =
 #define CASE	10
 #define TABS	11
 #define WIND	12
+#define WINDSZ	13
 
 #undef	SS			/* who co-opted this namespace?	*/
 
@@ -157,6 +158,7 @@ static const Tty_t Ttable[] =
 { "rows",	WIND,	W_SIZE,	IG,	0, 24, C("\an\a is the number of lines for display") },
 { "cols",	WIND,	W_SIZE,	IG,	1, 80, C("\an\a is the number of columns for display") },
 { "columns",	WIND,	W_SIZE,	IG,	1, 80, C("Same as \bcols\b") },
+{ "size",	WINDSZ,	W_SIZE,	IG,	2, 0, C("Current terminal window size") },
 #endif
 { "intr",	CHAR,	T_CHAR,	SS,	VINTR, 'C', C("Send an interrupt signal") },
 { "quit",	CHAR,	T_CHAR,	SS,	VQUIT, '|', C("Send a quit signal") },
@@ -703,6 +705,7 @@ static void set(char *argv[], struct termios *sp)
 			break;
 #ifdef TIOCSWINSZ
 		    case WIND:
+		    case WINDSZ:
 		    {
 			struct winsize win;
 			int n;
@@ -711,10 +714,27 @@ static void set(char *argv[], struct termios *sp)
 				error(ERROR_system(1),"cannot set %s",tp->name);
 				UNREACHABLE();
 			}
-			if(!(cp= *argv))
+			if(!(cp = *argv))
 			{
-				sfprintf(sfstdout,"%d\n",tp->mask?win.ws_col:win.ws_row);
+				switch(tp->mask)
+				{
+				    case 0: /* stty rows */
+					sfprintf(sfstdout,"%d\n",win.ws_row);
+					break;
+				    case 1: /* stty cols/stty columns */
+					sfprintf(sfstdout,"%d\n",win.ws_col);
+					break;
+				    case 2: /* stty size */
+					sfprintf(sfstdout,"%d %d\n",win.ws_row,win.ws_col);
+					break;
+				}
 				break;
+			}
+			if(tp->mask==2)
+			{
+				/* 'stty size' doesn't set the terminal window size */
+				error(ERROR_system(1),"%s: invalid argument",argv[0]);
+				UNREACHABLE();
 			}
 			argv++;
 			n=strtol(cp,&cp,10);
@@ -898,6 +918,7 @@ static int infof(Opt_t* op, Sfio_t* sp, const char* s, Optdisc_t* dp)
 	sfprintf(sp,"}[+Control Assignments.?If \ac\a is \bundef\b or an empty "
 		"string then the control assignment is disabled.]{");
 	listchars(sp,WIND);
+	listmode(sp,"size");
 	listchars(sp,CHAR);
 	sfprintf(sp,"}[+Combination Modes.]{");
 	listmode(sp,"ek");
